improved dynamic title font sizing by accounting for screen width and height; small fix for the slider/details column to prevent the bottom of the content div from overlapping part of the accent shadow;

--- a/src/components/PortfolioShowcase/ps-slider.module.css
+++ b/src/components/PortfolioShowcase/ps-slider.module.css
@@ -9,7 +9,7 @@
 
 .fade-in {
   opacity: 1;
-  height: 100%;
+  /* height: 100%; */
   transition: var(--transition-all-03);
 }
 
@@ -26,6 +26,8 @@
   height: var(--slider-height);
   opacity: 1;
   transition: var(--transition-all-03);
+  margin-top: -1rem; /* fixes issue where bottom of details section was covering up some of the accent background */
+  padding-top: 1rem; /* accounts for fix in line above to make sure the content at the top of the div is still fully visible */
 }
 
 .preview-image-wrap {
